--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: php
 
 php:
-  - 5.6
-  - 7.0
   - 7.1
   - 7.2
 
@@ -10,6 +8,8 @@ env:
   - SYMFONY_VERSION=3.4.*
   - SYMFONY_VERSION=4.0.*
   - SYMFONY_VERSION=4.1.*
+  - SYMFONY_VERSION=4.2.*
+  - SYMFONY_VERSION=4.3.*
 
 sudo: false
 dist: trusty
@@ -17,17 +17,6 @@ dist: trusty
 cache:
   directories:
     - $HOME/.composer/cache/files
-
-matrix:
-  exclude:
-    - php: 5.6
-      env: SYMFONY_VERSION=4.0.*
-    - php: 5.6
-      env: SYMFONY_VERSION=4.1.*
-    - php: 7.0
-      env: SYMFONY_VERSION=4.0.*
-    - php: 7.0
-      env: SYMFONY_VERSION=4.1.*
 
 before_install:
   - composer self-update
